2021-10-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.4-alpha02: Rodrigo Amarante';git push
	git tag -a 5.0.4-alpha02 -m '';git push --tags

	* Call nco_def_var_deflate() when dmn_nbr_out (not dmn_nbr_in) > 0 (fixes ncwa issue)

	* Add Granular BitGrom = GBG to NCO filter list

	* Call nc_def_var_deflate() at most once per variable due to new netCDF behavior

	* ncremap fix alg_typ for nco_idw

	* ncremap nco_rgr_wgt() remove assumption that input horizontal dimensions for nco_rgr_grd_2D_to_1D are in lat-lon order (now can be lon-lat)

2021-10-28  Charlie Zender  <zender@uci.edu>

	* ncremap nco_grd_nfr() fix units attribute for output grid_center_lon variable

2021-10-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.4-alpha01: Courgette';git push
	git tag -a 5.0.4-alpha01 -m 'idw not dwe, ninja, Functionally identical to 5.0.3';git push --tags

	* #include <fcntl.h> for MacOS so ninja build-engine finds creat()

2021-10-20  Charlie Zender  <zender@uci.edu>

	* Use 0ULL in PPC for double precision

2021-10-19  Charlie Zender  <zender@uci.edu>

	* Change default key and documentation from dwe to idw

2021-10-13  Charlie Zender  <zender@uci.edu>

	* Add 'idw' (inverse-distance-weighted) synonym to NCO dwe weight algorithm

2021-10-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.3: Daikokuya';git push
	git tag -a 5.0.3 -m 'all: ppc dgr gbg, dsd att_nm; ncremap mpi_nbr_usr, E3SMU=SYSTEM, alg_typ=tempest fixes';git push --tags

	* Testing by Xylar confirms this condifies, relabel 5.0.3-beta01 as 5.0.3 and release

	* NCO 5.0.3-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.3-beta01: Daikokuya';git push
	git tag -a 5.0.3-beta01 -m 'all: ppc dgr gbg, dsd att_nm; ncremap mpi_nbr_usr, E3SMU=SYSTEM, alg_typ=tempest fixes';git push --tags
