@@ -5222,9 +5222,9 @@ nco_cpy_var_dfn_trv                 /* [fnc] Define specified variable in output
       int dfl_lvl_in; /* [enm] Deflate level [0..9] */
       int shuffle; /* [flg] Turn-on shuffle filter */
       rcd=nco_inq_var_deflate(grp_in_id,var_in_id,&shuffle,&deflate,&dfl_lvl_in);
-      /* Until ~netCDF 4.8.0, nco_def_var_deflate() could be called multiple times 
+      /* Before netCDF 4.8.0, nco_def_var_deflate() could be called multiple times 
 	 Properties of final invocation before nc_enddef() would take effect
-	 After ~netCDF 4.8.0 first instance of nco_def_var_deflate() takes effect */
+	 After netCDF 4.8.0 first instance of nco_def_var_deflate() takes effect */
       if((deflate || shuffle) && dfl_lvl < 0){
 	/* Copy original filters if user did not explicity set dfl_lvl for output */ 
 	(void)nco_def_var_deflate(grp_out_id,var_out_id,shuffle,deflate,dfl_lvl_in);
