@@ -1750,9 +1750,9 @@ nco_ntp_vrt /* [fnc] Interpolate vertically */
 	  if(dmn_nbr_out > 0){
 	    int dfl_lvl_in; /* [enm] Deflate level [0..9] */
 	    rcd=nco_inq_var_deflate(in_id,var_id_in,&shuffle,&deflate,&dfl_lvl_in);
-	    /* Until ~netCDF 4.8.0, nco_def_var_deflate() could be called multiple times 
+	    /* Before netCDF 4.8.0, nco_def_var_deflate() could be called multiple times 
 	       Properties of final invocation before nc_enddef() would take effect
-	       After ~netCDF 4.8.0 first instance of nco_def_var_deflate() takes effect */
+	       After netCDF 4.8.0 first instance of nco_def_var_deflate() takes effect */
 	    if((deflate || shuffle) && dfl_lvl < 0){
 	      /* Copy original filters if user did not explicity set dfl_lvl for output */ 
 	      (void)nco_def_var_deflate(out_id,var_id_out,shuffle,deflate,dfl_lvl_in);
@@ -4405,9 +4405,9 @@ nco_rgr_wgt /* [fnc] Regrid with external weights */
 	  if(dmn_nbr_out > 0){
 	    int dfl_lvl_in; /* [enm] Deflate level [0..9] */
 	    rcd=nco_inq_var_deflate(in_id,var_id_in,&shuffle,&deflate,&dfl_lvl_in);
-	    /* Until ~netCDF 4.8.0, nco_def_var_deflate() could be called multiple times 
+	    /* Before netCDF 4.8.0, nco_def_var_deflate() could be called multiple times 
 	       Properties of final invocation before nc_enddef() would take effect
-	       After ~netCDF 4.8.0 first instance of nco_def_var_deflate() takes effect */
+	       After netCDF 4.8.0 first instance of nco_def_var_deflate() takes effect */
 	    if((deflate || shuffle) && dfl_lvl < 0){
 	      /* Copy original filters if user did not explicity set dfl_lvl for output */ 
 	      (void)nco_def_var_deflate(out_id,var_id_out,shuffle,deflate,dfl_lvl_in);
